...
                                                                <constraint firstAttribute="width" constant="140" id="9pV-7i-gbX"/>
                                                                <constraint firstAttribute="height" constant="134" id="wRf-I8-qJq"/>
                                                            </constraints>
                                                        </imageView>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HLF-CM-PhP" userLa
                                                            <rect key="frame" x="172" y="8" width="39.5" height="25.5"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="Movie.Title"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                                            <nil key="textColor"/>
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                    </subviews>
                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
...
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="sIp-iG-pMO" secondAttribute="trailing" id="aZE-nb-LBe"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="sIp-iG-pMO" secondAttribute="bottom" id="gdZ-PL-C1e"/>
                            <constraint firstItem="sIp-iG-pMO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="qxR-Y1-UKR"/>
                            <constraint firstItem="sIp-iG-pMO" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="twE-nQ-SiI"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Movies" id="kle-Lw-eN7" userLabel="Movies"/>
                    <connections>
                        <outlet property="tableView" destination="sIp-iG-pMO" id="xyB-3g-fJM"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
...
